{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 15,
  "lineage": "658409ed-8351-b6fa-27ae-e23c81f6dac6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "myrds-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e07809ec7a98641",
            "domain": "vpc",
            "id": "eipalloc-00e07809ec7a98641",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-5-51-81.compute-1.amazonaws.com",
            "public_ip": "52.5.51.81",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myrds-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521801763506:internet-gateway/igw-07d9640fc5d8ecdca",
            "id": "igw-07d9640fc5d8ecdca",
            "owner_id": "521801763506",
            "tags": {
              "Name": "myrds-gw"
            },
            "tags_all": {
              "Name": "myrds-gw"
            },
            "vpc_id": "vpc-0738d15f948d51a71"
          },
          "dependencies": [
            "aws_vpc.myrdsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "myrds-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e07809ec7a98641",
            "connectivity_type": "public",
            "id": "nat-08536b2dcbf1dae5a",
            "network_interface_id": "eni-0a8290d81fe31785e",
            "private_ip": "10.0.1.195",
            "public_ip": "52.5.51.81",
            "subnet_id": "subnet-01402519a7f43be84"
          },
          "dependencies": [
            "aws_eip.myrds-nat",
            "aws_internet_gateway.myrds-gw",
            "aws_subnet.myrdsvpc-public-1",
            "aws_vpc.myrdsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myrds-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myrds-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521801763506:route-table/rtb-0170b21d6166f28ca",
            "id": "rtb-0170b21d6166f28ca",
            "owner_id": "521801763506",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07d9640fc5d8ecdca",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myrdsvpc-public-1"
            },
            "tags_all": {
              "Name": "myrdsvpc-public-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0738d15f948d51a71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myrds-gw",
            "aws_vpc.myrdsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myrds-private-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myrds-private-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myrds-private-3-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myrds-public-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06cc7341c20d8821e",
            "route_table_id": "rtb-0170b21d6166f28ca",
            "subnet_id": "subnet-01402519a7f43be84"
          },
          "dependencies": [
            "aws_internet_gateway.myrds-gw",
            "aws_route_table.myrds-public",
            "aws_subnet.myrdsvpc-public-1",
            "aws_vpc.myrdsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myrds-public-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcb0e93aa4f28d56",
            "route_table_id": "rtb-0170b21d6166f28ca",
            "subnet_id": "subnet-0b2372cf0514fa5d9"
          },
          "dependencies": [
            "aws_internet_gateway.myrds-gw",
            "aws_route_table.myrds-public",
            "aws_subnet.myrdsvpc-public-2",
            "aws_vpc.myrdsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myrds-public-3-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c2d5dc0f67eeca1",
            "route_table_id": "rtb-0170b21d6166f28ca",
            "subnet_id": "subnet-057059c8a30dbe5a8"
          },
          "dependencies": [
            "aws_internet_gateway.myrds-gw",
            "aws_route_table.myrds-public",
            "aws_subnet.myrdsvpc-public-3",
            "aws_vpc.myrdsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myrdsvpc-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521801763506:subnet/subnet-04649f6e1cd07ecfc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04649f6e1cd07ecfc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "521801763506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myrdsvpc-private-1"
            },
            "tags_all": {
              "Name": "myrdsvpc-private-1"
            },
            "vpc_id": "vpc-0738d15f948d51a71"
          },
          "dependencies": [
            "aws_vpc.myrdsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myrdsvpc-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521801763506:subnet/subnet-0993e3d35ed34ceca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0993e3d35ed34ceca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "521801763506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myrdsvpc-private-2"
            },
            "tags_all": {
              "Name": "myrdsvpc-private-2"
            },
            "vpc_id": "vpc-0738d15f948d51a71"
          },
          "dependencies": [
            "aws_vpc.myrdsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myrdsvpc-private-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521801763506:subnet/subnet-029234cce61b7f4e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029234cce61b7f4e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "521801763506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myrdsvpc-private-3"
            },
            "tags_all": {
              "Name": "myrdsvpc-private-3"
            },
            "vpc_id": "vpc-0738d15f948d51a71"
          },
          "dependencies": [
            "aws_vpc.myrdsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myrdsvpc-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521801763506:subnet/subnet-01402519a7f43be84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01402519a7f43be84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "521801763506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myrdsvpc-public-1"
            },
            "tags_all": {
              "Name": "myrdsvpc-public-1"
            },
            "vpc_id": "vpc-0738d15f948d51a71"
          },
          "dependencies": [
            "aws_vpc.myrdsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myrdsvpc-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521801763506:subnet/subnet-0b2372cf0514fa5d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2372cf0514fa5d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "521801763506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myrdsvpc-public-2"
            },
            "tags_all": {
              "Name": "myrdsvpc-public-2"
            },
            "vpc_id": "vpc-0738d15f948d51a71"
          },
          "dependencies": [
            "aws_vpc.myrdsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myrdsvpc-public-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521801763506:subnet/subnet-057059c8a30dbe5a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057059c8a30dbe5a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "521801763506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myrdsvpc-public-3"
            },
            "tags_all": {
              "Name": "myrdsvpc-public-3"
            },
            "vpc_id": "vpc-0738d15f948d51a71"
          },
          "dependencies": [
            "aws_vpc.myrdsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myrdsvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521801763506:vpc/vpc-0738d15f948d51a71",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0059f8178edf1942c",
            "default_route_table_id": "rtb-026d6564b9135d8dc",
            "default_security_group_id": "sg-073433f0cc91adc4f",
            "dhcp_options_id": "dopt-01dae51bddbdedbac",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0738d15f948d51a71",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-026d6564b9135d8dc",
            "owner_id": "521801763506",
            "tags": {
              "Name": "myrds_vpc"
            },
            "tags_all": {
              "Name": "myrds_vpc"
            }
          }
        }
      ]
    }
  ]
}